<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SBDBT SPP</string>
    <string name="button01">1</string>
    <string name="button02">2</string>
    <string name="button03">3</string>
    <string name="button04">4</string>
    <string name="button05">5</string>
    <string name="button06">6</string>
    <string name="button07">7</string>
    <string name="connect">接続する</string>
    <string name="disconnect">切断する</string>

</resources>
