<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity" >
    
    <Spinner 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner01"
        />
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button00"
        android:text="@string/connect"
        android:layout_marginBottom="20dip"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button01"
        android:text="@string/button01"
        android:layout_gravity="center_horizontal"
        android:enabled="false"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button02"
        android:text="@string/button02"
        android:layout_gravity="center_horizontal"
        android:enabled="false"
        />
    
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button03"
        android:text="@string/button03"
        android:layout_gravity="center_horizontal"
        android:enabled="false"
        />
    
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button04"
        android:text="@string/button04"
        android:layout_gravity="center_horizontal"
        android:enabled="false"
        />
    
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button05"
        android:text="@string/button05"
        android:layout_gravity="center_horizontal"
        android:enabled="false"
        />
    
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button06"
        android:text="@string/button06"
        android:layout_gravity="center_horizontal"
        android:enabled="false"
        />
    
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button07"
        android:text="@string/button07"
        android:layout_gravity="center_horizontal"
        android:enabled="false"
        />
    
</LinearLayout>
